added the second image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131-Dynamic Web Fundamentals - William Wilson Mensah</title>
-    <meta name="description" content="Wilson's Homepage">
+    <meta name="description" content="William Wilson's | Building My First Dynamic Homepage">
     <meta name="author" content="William Wilson Mensah">
     <link rel="stylesheet" href="styles/base.css">
-    <script src="getdates.js" defer></script>
+    <script src="scripts/getdates.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,400;1,100&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
@@ -43,6 +43,16 @@
         </section></div>
         
     </main>
+    <aside class="box">
+            
+        <h2>Ghana</h2>
+        <img src="images/Ghana.jpg" alt="Ghana landscape">
+        <p>Ghana is a beautiful country with a rich cultural heritage
+            and vibrant traditions. The people of Ghana are known for their warmth, friendliness, and
+            hospitality. The country is also famous for its diverse wildlife,stunning landscapes, and delicious cuisine.
+            It's a place full of charm and beauty
+        </p>
+    </aside>
     <footer>
         <p>&copy; <span id="currentYear"></span> - William Wilson Mensah - Madagascar</p>
         <p id="lastModified">Last Modification</p>
