--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131-Dynamic Web Fundamentals - William Wilson Mensah</title>
-    <meta name="description" content="William Wilson's | Building My First Dynamic Homepage">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - William Wilson Mensah | Building My First Dynamic Homepage">
     <meta name="author" content="William Wilson Mensah">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
