will arrange it later

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         </section>
         <section class="Profile card">
             <img src="images/profile.jpg" alt="Hello, My name is William Wilson Mensah" width="200">
+            <li><a href="https://dev.to">Dev.to Community</a></li>
+            <li><a href="https://smashingmagazine.com">Smashing Magazine</a></li>
+            <li><a href="https://css-tricks.com">CSS Tricks</a></li>
+            <li><a href="https://w3schools.com">W3 Schools</a></li>
+            <li><a href="https://udemy.com">Udemy</a></li>
+            <li><a href="https://picsum.photos">Lorem Picsum Image Placeholder</a></li>
         </section></div>
         
     </main>
